# Capstone-1-Project-Zoomcamp

./: Dockerfile  README.md  app.py  docker-compose.yml  predict.py  pyproject.toml  train.py  wildfire_prediction.ipynb
