[tool.poetry]
name = "capstone-1-project-zoomcamp"
version = "0.1.0"
description = ""
authors = ["SchneiderSix <104461916+SchneiderSix@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
numpy = "1.26.4"
flasgger = "^0.9.7.1"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
